chore: remove machine-specific paths (#748)
Co-authored-by: idengzhao <40328852+idengzhao@users.noreply.github.com>